[project]
name = "test-cluster"
version = "0.1.0"
description = "Multi-environment Kubernetes bootstrap for minikube, GKE, and EKS with Argo CD."
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.167.0,<4.0.0",
    "pulumi-aws>=6.83.0,<7.0.0",
    "pulumi-command>=1.0.3,<2.0.0",
    "pulumi-gcp>=8.25.0,<9.0.0",
    "pulumi-kubernetes>=4.23.0,<5.0.0",
    "pyyaml>=6.0.2,<7.0.0",
]

[tool.uv]
package = false
